# data-forge-ai

./: .context.yaml  .cursorrules  .env.example  .gitignore  AGENT_1_PROMPT.md  AGENT_2_PROMPT.md  AGENT_3_PROMPT.md  AGENT_4_PROMPT.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.ai-context/: CONTEXT.md  PARALLEL_DEV.md  conventions.yaml
.ai-context/scripts/: task_dag.py
.ai-context/tasks/: _example.yaml  _schema.json  _template.yaml  tasks.yaml
.github/workflows/: docs.yml  generate-diagrams.yml
ai-context/: CONTEXT.md  DEVELOPMENT_WORKFLOW.md  INTERFACE_FIRST.md  PARALLEL_DEV.md  conventions.yaml
ai-context/scripts/: mark_in_progress_as_done.py  task_dag.py
ai-context/tasks/: tasks.schema.json  tasks.yaml
ai-context/templates/: prompt-template.md
config/: default.yaml
data-pipeline/ingestion/: .gitkeep
data-pipeline/processing/: .gitkeep
data-pipeline/quality/: .gitkeep
docker/: compose.analytics.yml  compose.base.yml  compose.compute.yml  compose.monitoring.yml  compose.orchestration.yml  compose.storage.yml  compose.testing.yml
docker/monitoring/: prometheus.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RESUME_DESCRIPTION.md  TECH_STACK.md
docs/diagrams/: architecture.d2  cache-hierarchy.d2  data-flow.d2  data-ingestion.d2  data-lake-structure.d2  dedup-algorithm.d2  minhash-dedup.d2  rag-data-flow.d2  rag-pipeline.d2  rag-retrieval.d2  retrieval-strategy.d2  system-layers.d2  task-dag.d2  (+2 more)
makefiles/: dev.mk  diagrams.mk  docker.mk  parallel.mk
src/: __init__.py
tests/: README.md  __init__.py
(+102 files in other folders)
